--- a/app/views/graphiql.scala.html
+++ b/app/views/graphiql.scala.html
@@ -13,9 +13,9 @@
 
     <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/graphiql.css")" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/0.9.0/fetch.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="@routes.Assets.versioned("lib/react/react.min.js")"></script>
+    <script src="@routes.Assets.versioned("lib/fetch/fetch.js")"></script>
+    <script src="@routes.Assets.versioned("lib/jquery/jquery.min.js")"></script>
 
     <script src="@routes.Assets.versioned("javascripts/graphiql.min.js")"></script>
     <script src="@routes.Assets.versioned("javascripts/app-graphiql.js")"></script>
