--- a/app/views/graphiql.scala.html
+++ b/app/views/graphiql.scala.html
@@ -11,11 +11,12 @@
 
     <title>Take a sip of Sangria with GraphiQL!</title>
 
-    <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/graphiql.css")" />
+    <link rel="stylesheet" href="@routes.Assets.versioned("lib/graphiql/graphiql.css")" />
 
     <script src="@routes.Assets.versioned("lib/react/react.min.js")"></script>
     <script src="@routes.Assets.versioned("lib/fetch/fetch.js")"></script>
     <script src="@routes.Assets.versioned("lib/jquery/jquery.min.js")"></script>
+    <script src="@routes.Assets.versioned("lib/graphiql/graphiql.min.js")"></script>
 
     <script src="@routes.Assets.versioned("javascripts/graphiql.min.js")"></script>
     <script src="@routes.Assets.versioned("javascripts/app-graphiql.js")"></script>
